original/tests%20231224161151/compiler_output/CompilerOutput-LargestPrimeFactor_65_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/LargestPrimeFactor_65_1Test.java:19: error: incompatible types: possible lossy conversion from long to int
        long result3 = LargestPrimeFactor.largestPrimeFactor(600851475143L);
                                                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
